Add Solution for Module 10 Item 11 Exercise
write more complex async code
fatch a post on button click
    - fetch post with spec id (hardcoded for now)
    - fetch users
    - fetch post of id specified
    - fetch comments of specified post id

    - log post author name of post with id
    - log post text of same id
    - log comments and comment authors

--- a/10_talking-to-the-backend/11_async_await_intermediate_exercise/client/index.html
+++ b/10_talking-to-the-backend/11_async_await_intermediate_exercise/client/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>See the console ➡️ or ⬇️</h1>
-    <button class="fetch-button" type="button">Fetch Users</button>
+    <button class="fetch-button" type="button">Fetch Post</button>
 </body>
 
 </html>
